--- a/themes/advanced_v2_light_noi/advanced_v2_light_noi.css
+++ b/themes/advanced_v2_light_noi/advanced_v2_light_noi.css
@@ -93,7 +93,7 @@ table#container td#header {
 }
 
 table#container td#header div.title {
-    font-size: 18px;
+    font-size: 16px;
     height: 60px;
     display: block;
     width: 240px;
@@ -114,7 +114,7 @@ table#container td#header div.version {
     padding-left: 20px;
     color: #fff;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 13px;
 }
 
 td#navi {
@@ -370,4 +370,23 @@ div#ident,
 table#container td#header div.title small,
 span#dtime {
     display: none;
+}
+
+div#note-disabled,
+div#notice,
+div#survey-msg,
+div#survey-warn {
+    background-color: #fbfbfb;
+    color: #000;
+    border-color: #000;
+}
+
+.iperf_status_table,
+div#tools-grid {
+    background-color: #fbfbfb;
+    margin: 0px 40px 10px;
+    padding: 20px;
+    width:auto;
+    border:none;
+    box-shadow: rgba(0, 0, 0, .2) 0px 3px 3px;
 }
